# shear-pipe-peaks

./: .gitignore  README.md  compute_peaks.ipynb  constraints_peaks_single_gaussian_kernel.ipynb  environment.yml  environment_3.9.yml  fiducial_peaks_Ksmoothed_single_gaussian.npy  nz.txt  pyproject.toml  requirements.txt
example/: #master_file.txt#  basic_massmap.ipynb  constraints_CFIS-P3.ipynb  constraints_CFIS-P3.py  constraints_CFIS-P3_py3109.ipynb  constraints_CFIS-P3_py3613.ipynb  cosmoSLICS_bookkeeping.ipynb  cosmoSLICS_bookkeeping_cosmostat.ipynb  covariance_bookkeeping.ipynb  covariance_bookkeeping_cosmostat.ipynb  likelihood.py  mass_map_notebook.ipynb  master_file.txt  test_data.txt  test_gpr_full.py  test_gpr_new_python.py  test_paral.ipynb  test_slics.py  utils.py
example/.ipynb_checkpoints/: constraints_CFIS-P3-checkpoint.ipynb
input/: Fid_correction.npy  HighAGN_correction.npy  LowAGN_correction.npy  convergence_gal_mnv0.00000_om0.30000_As2.1000_peaks_2arcmin_0.65_b030_snr_min_max_ngal_7.npy  convergence_gal_mnv0.00000_om0.30000_As2.1000_peaks_2arcmin_0.68_b030_snr_min_max_ngal_7.npy  environment_3.6.yml  list_cosmo_peaks_z065.txt  list_cosmo_peaks_z068.txt  master_file.txt  master_file_cov.txt  parsed_cov_data.npy  parsed_cov_data.txt  peaks_mean_05deg.npy  peaks_mean_1deg.npy  peaks_mean_2deg.npy  peaks_mean_4deg.npy  peaks_mean_dm_1deg.npy  peaks_mean_global.npy
notebooks/: Baryonic_effects_correction.ipynb  Interpolation_kappa_maps.ipynb  compute_peaks.ipynb  compute_powerspectrum.ipynb  constraints_CFIS-P3.ipynb  constraints_peaks_single_gaussian_kernel.ipynb  test.py  test_slics.ipynb  test_slics.py
output/tiles_lists/: 00_a_LOS1_Bin1.txt  00_a_LOS1_Bin2.txt  00_a_LOS1_Bin3.txt  00_a_LOS1_Bin4.txt  00_a_LOS2_Bin1.txt  00_a_LOS2_Bin2.txt  00_a_LOS2_Bin3.txt  00_a_LOS2_Bin4.txt  00_a_LOS3_Bin1.txt  00_a_LOS3_Bin2.txt  00_a_LOS3_Bin3.txt  00_a_LOS3_Bin4.txt  00_a_LOS4_Bin1.txt  00_a_LOS4_Bin2.txt  00_a_LOS4_Bin3.txt  00_a_LOS4_Bin4.txt  00_a_LOS5_Bin1.txt  00_a_LOS5_Bin2.txt  00_a_LOS5_Bin3.txt  00_a_LOS5_Bin4.txt  00_f_LOS1_Bin1.txt  00_f_LOS1_Bin2.txt  00_f_LOS1_Bin3.txt  00_f_LOS1_Bin4.txt  00_f_LOS2_Bin1.txt  00_f_LOS2_Bin2.txt  00_f_LOS2_Bin3.txt  00_f_LOS2_Bin4.txt  00_f_LOS3_Bin1.txt  00_f_LOS3_Bin2.txt  00_f_LOS3_Bin3.txt  00_f_LOS3_Bin4.txt  00_f_LOS4_Bin1.txt  00_f_LOS4_Bin2.txt  00_f_LOS4_Bin3.txt  00_f_LOS4_Bin4.txt  00_f_LOS5_Bin1.txt  00_f_LOS5_Bin2.txt  00_f_LOS5_Bin3.txt  00_f_LOS5_Bin4.txt  (+960 more)
scripts/: candide_CFIS_P3.sh  candide_covariance.sh  candide_covariance_MS_PC.sh  candide_test_gpr_full.sh  candide_test_gpr_new_python.sh  cov_MS_PC_cosmostat.py  cov_MS_PC_paral_cosmostat.py  cov_SS_PC_cosmostat.py  cov_SS_PC_paral_cosmostat.py  cov_l1_paral_cosmostat.py  cov_l1_parallelized.py  cov_l1_parallelized.sh  cov_paral_cs.py  cov_paral_cs.sh  covariance.py  covariance_MS_PC.py  data_processing.py  data_processing_test.py  data_run.py  script_for_scripts.py
sp_peaks/: __init__.py  mapping.py  plotting.py  slics.py  summary_statistics.py  transform_to_notebooks.py
