[tool.poetry]
name = "sp_peaks"
version = "0.0.1"
description = "ShapePipe peak counts"
readme = "README.md"
authors = [
    "Andreas Tersenov <andreas.tersenov@cea.fr>",
    "Lucie Baumont <lucie.baumont@cea.fr>",
    "Martin Kilbinger <martin.kilbinger@cea.fr>",
]

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-black = "^0.3"
pytest-cov = "^2.0"
pytest-pydocstyle = "*"

[tool.black]
line-length = 80
target-version = ["py309", "py310", "py311"]

[tool.poetry.urls]
Source = "https://github.com/CosmoStat/shear-pipe-peaks"
Documentation = "https://github.com/CosmoStat/shear-pipe-peaks"
Tracker = "https://github.com/CosmoStat/shear-pipe-peaks/issues"

[tool.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
addopts = "--verbose --black --pydocstyle --cov=sp_peaks"
testpaths = ["sp_peaks"]

[tool.setuptools]
packages = ["sp_peaks"]

[tool.setuptools.dynamic]
version = {attr = "sp_peaks.__version__"}

[tool.poetry.dependencies]
python = "^3.9"

astropy = "*"
joblib = "*"
matplotlib = "*"
numpy = "*"
scipy = "*"
scikit-learn = "*"
tqdm = "*"

chainconsumer = "*"
cs_util = "*"
emcee = "^3.1.1"
getdist = "*"
jupyter = "*"
jupytext = "*"
lenspack = "*"
zenodo_get = "*"

[tool.poetry.scripts]
run = "sp_peaks.transform_to_notebooks:main"

[build-system]
requires = ["flit_core>=3.0.0"]
build-backend = "flit_core.buildapi"
