[tool.poetry]
name = "sp_peaks"
version = "0.0.2"
readme = "README.md"
description = "Weak-lensing peak counts from ShapePipe output"
authors = [
    "Andreas Tersenov <andreas.tersenov@cea.fr>",
    "Lucie Baumont <lucie.baumont@cea.fr>",
    "Martin Kilbinger <martin.kilbinger@cea.fr>",
]
license = "MIT" # See file LICENSE
keywords = [
    "CosmoStat",
    "cosmology",
    "weak gravitational lensing",
    "peak counts",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = "^3.9"
#python = "3.6.13"
astropy = "^4.0"
numpy = "^1.19"
scipy = "^1.5"
scikit-learn = "^1.3"
matplotlib = "^3.7.2"
zenodo-get = "^1.4.0"
tqdm = "^4.66.1"
emcee = "3.1.1"
chainconsumer = "^0.34.0"
getdist = "^1.4.3"
jupyter = "^1.0.0"
jupytext = "^1.15.1"
lenspack = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pydocstyle = "^6.3.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Source = "https://github.com/CosmoStat/shear-pipe-peaks"
Documentation = "https://github.com/CosmoStat/shear-pipe-peaks"
Tracker = "https://github.com/CosmoStat/shear-pipe-peaks/issues"

[tool.black]
line-length = 80

[tool.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
addopts = "--verbose --black --pydocstyle --cov=sp_peaks"
testpaths = ["sp_peaks"]
